...
                                                <rect key="frame" x="0.0" y="0.0" width="341" height="32"/>
                                                <segments>
                                                    <segment title="User"/>
                                                    <segment title="Instructor"/>
                                                </segments>
                                                <connections>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                                <color key="backgroundColor" name="Text Field Background Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Onboarding.UsernameTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="N74-9P-9Dj"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                                <color key="backgroundColor" name="Text Field Background Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Onboarding.PasswordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="ttm-xP-DDU"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
                                                <color key="backgroundColor" name="Text Field Background Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Onboarding.VerifyPasswordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="dFp-uk-cfT"/>
...
                                <rect key="frame" x="100" y="762" width="214" height="50"/>
                                <color key="backgroundColor" name="Primary Color"/>
                                <accessibility key="accessibilityConfiguration" identifier="Onboarding.SignUpButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="xGG-o3-ibe"/>
...
                                <segments>
                                    <segment title="Sign Up"/>
                                    <segment title="Login"/>
                                </segments>
                                <color key="tintColor" name="Primary Color"/>
...
                        <viewLayoutGuide key="safeArea" id="ik7-vS-KMF"/>
                    </view>
                    <navigationItem key="navigationItem" title="How-To" id="WO7-Su-4zj"/>
                    <connections>
                        <outlet property="loginButton" destination="ned-C2-uay" id="a4B-xX-P8z"/>
...
