...
                                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maP-4A-PFx">
                                                <rect key="frame" x="174" y="0.0" width="200" height="27.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="HomeVC.UsernameLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="200" id="Bqf-ck-2xg"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructor" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uO2-IU-MvX">
                                                <rect key="frame" x="224" y="0.0" width="150" height="27.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="HomeVC.UserTypeLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="150" id="sOh-3R-cBO"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypR-kL-tD0">
                                        <rect key="frame" x="0.0" y="231" width="374" height="50"/>
                                        <color key="backgroundColor" name="Primary Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ProfileVC.CreatePost"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="1iv-Nf-z3P"/>
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="  Create Post" image="square.and.pencil" catalog="system">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
