...
    </dependencies>
    <scenes>
        <!--Tutorials-->
        <scene sceneID="Z3Q-ak-glC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vky-Mj-K8F" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Tutorials" image="doc.plaintext" catalog="system" id="BzM-jr-s55"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Ltn-pl-yJy">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                                </cells>
                                <connections>
                                    <outlet property="dataSource" destination="kSB-cy-UsA" id="Q4Q-dg-eS9"/>
                                    <outlet property="delegate" destination="kSB-cy-UsA" id="rH5-zY-AdO"/>
                                </connections>
                            </collectionView>
                            <searchBar contentMode="redraw" placeholder="Search by instructor id:" translatesAutoresizingMaskIntoConstraints="NO" id="Spv-sW-Tal">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                        </subviews>
                        <color key="backgroundColor" name="Background Color"/>
                        <color key="tintColor" name="Primary Color"/>
...
                            <constraint firstItem="6UO-7M-Dhq" firstAttribute="leading" secondItem="oc5-Hu-rQ2" secondAttribute="leading" id="oux-88-1e2"/>
                            <constraint firstItem="6UO-7M-Dhq" firstAttribute="trailing" secondItem="oc5-Hu-rQ2" secondAttribute="trailing" id="yVY-tx-152"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="oc5-Hu-rQ2"/>
                    </view>
                    <navigationItem key="navigationItem" title="How-To" id="Obl-ni-VzJ">
                        <barButtonItem key="rightBarButtonItem" title="Delete" id="5uM-aE-wwG">
                            <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="deleteTutorialTapped:" destination="sAw-Sh-O4q" id="hdE-Pc-QPs"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
