...
        
        let stackLeadingConstraint = textFieldsStack.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 20)
        let stackBottomConstraint = textFieldsStack.topAnchor.constraint(equalTo: detailStackView.bottomAnchor, constant: 8)
        let stackTrailingConstraint = textFieldsStack.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20)
        
        let addStepButton = UIButton(type: .system)
        addStepButton.setTitle("+ Add Step", for: .normal)
        addStepButton.addTarget(self, action: #selector(addTextField), for: .touchUpInside)
        addStepButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(addStepButton)
        
        let buttonTopConstraint = addStepButton.topAnchor.constraint(equalTo: textFieldsStack.bottomAnchor, constant: 8)
        let buttonLeadingConstraint = addStepButton.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 20)
...
